# Gopi_AI_Projects

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  setup_paths.py
.myenv_py_3_10/: pyvenv.cfg
.myenv_py_3_10/Scripts/: activate.bat
My_AI_Projects/src/: RAG_HR_Policies.py  convert_HTML_to_PDF.py  convert_HTML_to_PDF_v2.py  finance_langgraph_app.py  langchain1_simple_prompt.py  langchain2_role_based_prompt.py  langchain3_sequential_exec.py
Phidata_Project/docs/: README.md
Phidata_Project/src/: basic.py
ResumeScreening/src/: app.py  gopi_resume_processor.py
Resumes/: Sample Developer Resume.docx
crew_ai_project/: README.md  pyproject.toml
crew_ai_project/src/crew_ai_project/: crew_workflow.md  report.md
crew_ai_project/src/crew_ai_project/config/: agents.yaml
docs/: DEVELOPMENT.md
global_setup/: PROJECT_DOCUMENTATION.md  clear_chroma.py  commands.md  requirements.txt
global_util/: __init__.py  gopi_util.py
phidata_multi_agent_app/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
phidata_multi_agent_app/.myenv_py_3_10/Scripts/: activate
phidata_multi_agent_app/docs/: DEVELOPMENT.md  README.md  TESTING.md
phidata_multi_agent_app/e2e_tests/: test_ui_end_to_end.py
phidata_multi_agent_app/src/: financial_app.py
phidata_multi_agent_app/unit_test/: run_tests.py  test_financial_analysis.py
unit_test/: test_financial_analysis.py
windsurf_py311_venv/: pyvenv.cfg
windsurf_py311_venv/Scripts/: activate  activate.bat  docx2txt  dumppdf.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py
(+6 files in other folders)
