[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gopi-global-util"
version = "1.0.0"
description = "Global utilities for Gopi's AI projects"
authors = [{name = "Gopi"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.4.0",
    "price-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/gopi-ai-exercises"
