[project]
name = "crew_ai_project"
version = "0.1.0"
description = "Crew_AI_Project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
crew_ai_project = "crew_ai_project.main:run"
run_crew = "crew_ai_project.main:run"
train = "crew_ai_project.main:train"
replay = "crew_ai_project.main:replay"
test = "crew_ai_project.main:test"
run_with_trigger = "crew_ai_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
